Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   app/__pycache__/models.cpython-311.pyc
	modified:   app/__pycache__/views.cpython-311.pyc
	deleted:    app/migrations/0001_initial.py
	deleted:    app/migrations/0002_keyword.py
	deleted:    app/migrations/__pycache__/0001_initial.cpython-311.pyc
	deleted:    app/migrations/__pycache__/0001_tmdbapi_key.cpython-311.pyc
	deleted:    app/migrations/__pycache__/0002_keyword.cpython-311.pyc
	deleted:    app/migrations/__pycache__/__init__.cpython-311.pyc
	deleted:    app/migrations/__pycache__/initial_data.cpython-311.pyc
	modified:   app/models.py
	modified:   app/views.py
	modified:   setup/__pycache__/urls.cpython-311.pyc
	modified:   setup/urls.py
	modified:   templates/admin/change_list.html

--- a/templates/admin/change_list.html
+++ b/templates/admin/change_list.html
@@ -98,5 +98,18 @@
                 });
             </script>
         {% endif %}
+        {% if opts.verbose_name == 'movie' or opts.verbose_name == 'serie' %}
+            <div id="toolbar">
+                <div>
+                    <input type="button" id="update" href="{% url 'update_data' opts.verbose_name %}" class="default" value="Update all {{opts.verbose_name_plural}} info" >
+                </div>
+                <script>
+                    var update= document.getElementById("update");
+                    update.addEventListener("click", function(event){
+                        window.location = this.getAttribute("href");
+                    });
+                </script>
+            </div>
+        {% endif %}
     {% endif %}
 {% endblock %}
