Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   app/__pycache__/admin.cpython-311.pyc
	modified:   app/__pycache__/models.cpython-311.pyc
	modified:   app/__pycache__/views.cpython-311.pyc
	modified:   app/admin.py
	new file:   app/migrations/0002_upcomingserie_upcomingmovie_topratedserie_and_more.py
	new file:   app/migrations/0003_rename_movie_popularmovie_source_and_more.py
	new file:   app/migrations/0004_popularmovie_enabled_popularserie_enabled_and_more.py
	new file:   app/migrations/__pycache__/0002_upcomingserie_upcomingmovie_topratedserie_and_more.cpython-311.pyc
	new file:   app/migrations/__pycache__/0003_rename_movie_popularmovie_source_and_more.cpython-311.pyc
	new file:   app/migrations/__pycache__/0004_popularmovie_enabled_popularserie_enabled_and_more.cpython-311.pyc
	modified:   app/models.py
	modified:   app/templatetags/__pycache__/functions.cpython-311.pyc
	modified:   app/templatetags/functions.py
	modified:   app/views.py
	modified:   setup/__pycache__/urls.cpython-311.pyc
	modified:   setup/urls.py
	modified:   templates/admin/change_list.html

--- a/templates/admin/change_list.html
+++ b/templates/admin/change_list.html
@@ -1,4 +1,5 @@
 {% extends 'admin/change_list.html' %}
+{% load functions %}
 
 {% block object-tools %}
     {{ block.super }}
@@ -111,5 +112,19 @@
                 </script>
             </div>
         {% endif %}
+        {% if opts.verbose_name == 'popular movie' or opts.verbose_name == 'popular serie' or opts.verbose_name == 'upcoming movie' or opts.verbose_name == 'upcoming serie' or opts.verbose_name == 'top rated movie' or opts.verbose_name == 'top rated serie' %}
+        <div id="toolbar">
+            <div>
+                <input type="button" id="update" href="{% url 'generate_data' opts.verbose_name|replace %}" class="default" value="Generate {{opts.verbose_name_plural}}" >
+            </div>
+            <script>
+                var update= document.getElementById("update");
+                update.addEventListener("click", function(event){
+                    window.location = this.getAttribute("href");
+                });
+            </script>
+        </div>
+        {% endif %}
     {% endif %}
 {% endblock %}
+ 
