Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   app/__pycache__/models.cpython-311.pyc
	modified:   app/__pycache__/views.cpython-311.pyc
	modified:   app/models.py
	modified:   app/sites/__pycache__/scrapper.cpython-311.pyc
	modified:   app/sites/__pycache__/wiflix_surf.cpython-311.pyc
	modified:   app/sites/scrapper.py
	modified:   app/sites/wiflix_surf.py
	modified:   app/views.py
	new file:   failed_page_movies.txt
	new file:   failed_pages.txt
	modified:   setup/__pycache__/settings.cpython-311.pyc
	modified:   setup/settings.py
	modified:   templates/admin/change_list.html

--- a/templates/admin/change_list.html
+++ b/templates/admin/change_list.html
@@ -86,7 +86,7 @@
                         alert('Please enter a valid end page number.');
                         return;
                     }
-                    if(start.value>end.value){
+                    if(parseInt(start.value)>parseInt(end.value)){
                         alert('Start page number should be smaller than End page number.');
                         return;
                     }
